🐛 Fix task alignment in longform lists

--- a/src/fragments/06a-checkboxes.scss
+++ b/src/fragments/06a-checkboxes.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 body:not(.is-mobile) .markdown-preview-view .task-list-item-checkbox {
   margin-top: 2px;
   margin-bottom: 1px;
@@ -10,6 +11,10 @@ body.is-mobile .markdown-preview-view .task-list-item-checkbox {
 .markdown-preview-view .task-list-item-checkbox,
 .markdown-source-view.mod-cm6  .HyperMD-task-line[data-task] input[type=checkbox].task-list-item-checkbox {
   border-radius: 3px;
+}
+.markdown-preview-view ul.contains-task-list > li.task-list-item,
+.markdown-preview-view ul.contains-task-list > li.task-list-item > p:first-of-type {
+  text-indent: -24px;
 }
 .markdown-source-view.mod-cm6 .HyperMD-task-line[data-task=" "] input[type=checkbox][data-task=" "].task-list-item-checkbox:not(:checked),
 .markdown-preview-view ul.contains-task-list > li.task-list-item input[type=checkbox].task-list-item-checkbox:not(:checked),
